tdf#112334 PPTX export style.color

Change-Id: I6a5779cee379b82d81cc73a0d0c154e6caa51424
Reviewed-on: https://gerrit.libreoffice.org/42613
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>
Tested-by: Szymon Kłos <szymon.klos@collabora.com>
(cherry picked from commit 9bcf000b49252a2293d05135a1a3d62bca5a5dc8)
Signed-off-by: Andras Timar <andras.timar@collabora.com>